external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_lambda_fail.exp
error[E04010]: cannot infer type
  ┌─ tests/move_check/parser/spec_parsing_lambda_fail.move:3:15
  │
3 │       let _ = |y| x + y;
  │               ^^^^^^^^^ Could not infer this type. Try adding an annotation

error[E04031]: invalid usage of lambda
  ┌─ tests/move_check/parser/spec_parsing_lambda_fail.move:3:15
  │
3 │       let _ = |y| x + y;
  │               ^^^^^^^^^ Lambdas can only be used directly as arguments to macro functions

